# KunonAI_Translation

./: .gitignore  INSTALL_README.md  README.md  __init__.py  config.py  final-cpu.py  final-gpu.py  pyproject.toml  requirements.txt  run_dpsk_ocr_eval_batch.py  run_dpsk_ocr_image.py  run_dpsk_ocr_pdf.py  setup.py  utils.py
configs/: __init__.py  config.py  deepseek_ocr_image_config.py
deepseekocr_net/: __init__.py  deepseek_ocr.py
deepseekocr_net/process/: image_process.py
deepseekocr_net/utils/: __init__.py  config.py
results/test_1/: result.md  result.mmd  result_ori.mmd
results/test_2/: result.mmd  result_ori.mmd
results/test_8/: result.mmd  result_ori.mmd
results/ui_outputs/run_1764227968/: result.md  result_ori.mmd
results/ui_outputs/run_1764228015/: result.md  result_ori.mmd
results/ui_outputs/run_1764228074/: result.md  result_ori.mmd
results/ui_outputs/run_1764228117/: result.md  result_ori.mmd
results/ui_outputs/run_1764228139/: result.md  result_ori.mmd
results/ui_outputs/run_1764228180/: result.md
results/ui_outputs/run_1764228839/: result.md  result_ori.mmd
results/ui_outputs/run_1764230696/: result.mmd  result_ori.mmd
results/ui_outputs/run_1764231035/: result_ori.mmd
results/ui_outputs/run_1764231048/: result_ori.mmd
results/ui_outputs/run_1764231055/: result_ori.mmd
tools/: infer_ocr_image.py  infer_ocr_image_ui.py  inference.py  run_dpsk_ocr_eval_batch.py  run_dpsk_ocr_image.py  run_dpsk_ocr_pdf.py  utils.py
tools/ori_code/: run_dpsk_ocr_eval_batch.py  run_dpsk_ocr_image.py
(+17 files in other folders)
