[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KunonAI_Translation"
version = "0.1.0"
description = "DeepSeek OCR Translation Pipeline"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.46.3",
    "tokenizers>=0.20.3",
    "PyMuPDF",
    "img2pdf",
    "einops",
    "easydict",
    "addict",
    "Pillow",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

